# hl-historical-data

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  config.example.toml  docker-compose.yml
docs/: python-research-workflow.md
docs/adr/: 0001-questdb-types.md
notebooks/: README.md
scripts/: setup_python_research_env.sh
src/: config.rs  main.rs
src/backfill/: decompress.rs  hour_window.rs  ingest.rs  mod.rs  parse.rs  report.rs  s3.rs  status.rs
src/clients/python/hl-historical-client/: MANIFEST.in  README.md  pyproject.toml  setup.py
src/clients/python/hl-historical-client/examples/: basic_fills_query.py  vwap_and_bars.py  wallet_summary.py
src/clients/python/hl-historical-client/proto/: hl_historical.proto
src/clients/python/hl-historical-client/src/hl_historical_client/: __init__.py  client.py
src/clients/python/hl-historical-client/src/hl_historical_client/proto/: __init__.py
src/clients/python/hl-historical-client/tests/: test_client.py
src/db/: mod.rs  questdb.rs
src/grpc/: admin.rs  admin_cli.rs  mod.rs  proto.rs  queries.rs  server.rs
work_logs/historical_data/: issues.md  spec.md
