[package]
name = "hl-historical-data"
version = "0.1.0"
edition = "2021"
description = "Hyperliquid historical fill data service"

[[bin]]
name = "hl-historical-data"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Configuration
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"

# Database - QuestDB reads via PG wire
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"

# Database - QuestDB writes via ILP
questdb-rs = { version = "6", features = ["sync-sender-tcp", "chrono_timestamp"] }

# AWS S3
aws-config = "1"
aws-sdk-s3 = "1"

# Compression
lz4 = "1"

# Serialization / parsing
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

[build-dependencies]
tonic-build = "0.12"
