[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "hl-historical-client"
version = "0.1.0"
description = "Python SDK for Hyperliquid historical data service"
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
    "polars>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hl_historical_client = ["py.typed"]
"hl_historical_client.proto" = ["*.pyi"]
